--- a/SitioWebOrtopediaVelásquez/bin/SitioWebOrtopediaVelásquez.dll.config
+++ b/SitioWebOrtopediaVelásquez/bin/SitioWebOrtopediaVelásquez.dll.config
@@ -41,8 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OrtopediaVelásquezEntities" connectionString="metadata=res://*/OrtopediaVelásquez.csdl|res://*/OrtopediaVelásquez.ssdl|res://*/OrtopediaVelásquez.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LR0I3Q5\SQLEXPRESS;initial catalog=OrtopediaVelásquez;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+ <add name="OrtopediaVelásquezEntities" connectionString="metadata=res://*/OrtopediaVelásquez.csdl|res://*/OrtopediaVelásquez.ssdl|res://*/OrtopediaVelásquez.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LR0I3Q5\SQLEXPRESS;initial catalog=OrtopediaVelásquez;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
